syntax = "proto3";

import "proto/PacketBase.proto";

option csharp_namespace = "ServerCoreTCP.ProtobufWrapper";

message Test1 {
    uint32 playerId = 1;
    string playerName = 2;
}

message Test2 {
    string msg = 1;
    int64 time = 2;
    float duration = 3;
}
