syntax = "proto3";

import "proto/PacketBase.proto";

option csharp_namespace = "ServerCoreTCP.Protobuf";

message Vector3 {
    PacketType packetType = 1;
    float x = 2;
    float y = 3;
    float z = 4;
}
